trying to fix footer covering the list

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,7 +1,7 @@
 .container.user-settings {
   padding-left: 15px !important;
   padding-right: 15px !important;
-  margin-bottom: 54px;
+  margin-bottom: 110px;
 
   .form-group {
     padding: 0;
